# MonitorCronJobs

./: README.md  core.py  cron_status.py  jobs.json  models.py  pyproject.toml  tray_app.py
src/monitor_cron/: cli.py  core.py  enums.py  models.py  tray.py
tests/: conftest.py  test_enums.py  test_frequency_checks.py  test_job_state.py  test_load_jobs.py  test_log_analysis.py  test_models.py  test_process_detection.py
