[project]
name = "monitorcronjobs"
version = "0.1.0"
description = "A monitoring suite for Ubuntu that tracks your automated tasks. Includes a system tray app for peace of mind and a CLI tool for quick terminal reports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pygobject>=3.54.5",
    "rich>=14.3.1",
]

[project.scripts]
monitor-cli = "monitor_cron.cli:main"
monitor-tray = "monitor_cron.tray:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitor_cron"]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.16.0",
    "pytest>=9.0.2",
]

[tool.pyright]
reportMissingModuleSource = false